adding JS on click function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <label for="endYear">End Year:</label>
                                 <input type="text" class="form-control" id="endYear">
                             </div>
-                      <a href="#" type="submit" class="btn btn-primary">Submit</a>
+                      <a href="#" type="submit" class="btn btn-primary" id="searchBtn">Search</a>
                       <a href="#" type="button" class="btn btn-primary">Clear</a>
                     </div>
                 </div>
