--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         </div>
                         <div class="form-group">
                             <label for="sel1">Number of Records to Retrieve:</label>
-                            <select class="form-control" id="sel1">
-                                <option value=1>1</option>
-                                <option value=5 selected>5</option>
-                                <option value=10>10</option>
+                            <select class="form-control" id="numRecords">
+                                <option value="1">1</option>
+                                <option value="5" selected>5</option>
+                                <option value="10">10</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -52,23 +52,15 @@
             <div class="col-lg-12">
                 <div class="card">
                     <h5 class="card-header">Search Results</h5>
-                    <div class="card-body">
-                            <div class="card card-body bg-light">
+                    <div class="card-body" id="card-section">
+                            <!-- <div class="card card-body bg-light">
                             <h2>Title:</h2>
                             <h3>Author:</h3>
                             <h4>Section:</h4>
                             <h4>Date:</h4>
                             <h4>Link:</h4>
                             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        </div>
-                        <div class="card card-body bg-light">
-                                <h2>Title:</h2>
-                                <h3>Author:</h3>
-                                <h4>Section:</h4>
-                                <h4>Date:</h4>
-                                <h4>Link:</h4>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
