--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Cousine&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>New York Times Search</title>
 </head>
 <body>
 
     <div class="container">
-        <div class="jumbotron">
+        <div class="jumbotron text-center">
             <h1>New York Times Search</h1>
         </div>
         <div class="row">
@@ -20,10 +21,10 @@
                 <div class="card">
                     <h5 class="card-header">Search Parameters</h5>
                     <div class="card-body">
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">Specify your search parameters below.</p>
                         <div class="form-group">
                           <label for="search">Search Term:</label>
-                          <input type="text" class="form-control" id="search">
+                          <input type="text" class="form-control clearThis" id="search">
                         </div>
                         <div class="form-group">
                             <label for="sel1">Number of Records to Retrieve:</label>
@@ -35,40 +36,30 @@
                         </div>
                         <div class="form-group">
                             <label for="startYear">Start Year:</label>
-                            <input type="text" class="form-control" id="startYear">
+                            <input type="text" class="form-control clearThis" id="startYear">
                         </div>
                         <div class="form-group">
                                 <label for="endYear">End Year:</label>
-                                <input type="text" class="form-control" id="endYear">
+                                <input type="text" class="form-control clearThis" id="endYear">
                             </div>
-                      <a href="#" type="submit" class="btn btn-primary" id="searchBtn">Search</a>
-                      <a href="#" type="button" class="btn btn-primary">Clear</a>
+                      <a href="#" type="submit" class="btn btn-warning" id="searchBtn">Search</a>
+                      <a href="#" type="button" class="btn btn-warning" id="clear">Clear</a>
                     </div>
                 </div>
             </div>
         </div>
             <!-- Results Panel -->
-        <div class="row" id="bottom-row">
+        <div class="row bg-gray" id="bottom-row">
             <div class="col-lg-12">
                 <div class="card">
                     <h5 class="card-header">Search Results</h5>
-                    <div class="card-body" id="card-section">
-                            <!-- <div class="card card-body bg-light">
-                            <h2>Title:</h2>
-                            <h3>Author:</h3>
-                            <h4>Section:</h4>
-                            <h4>Date:</h4>
-                            <h4>Link:</h4>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        </div> -->
+                    <div class="card-body clearThis" id="card-section">
                     </div>
                 </div>
             </div>
         </div>  
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="javascript/java.js"></script>
 </body>
 </html>
