--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Cousine&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.9.1/parsley.min.js"></script>
     <title>New York Times Search</title>
 </head>
 <body>
@@ -25,27 +27,30 @@
                     <div class="card-body">
                         <p class="card-text">Specify your search parameters below.</p>
                         <div class="form-group">
-                          <label for="search">Search Term:</label>
-                          <input type="text" class="form-control clearThis" id="search">
-                        </div>
-                        <div class="form-group">
-                            <label for="sel1">Number of Records to Retrieve:</label>
-                            <select class="form-control" id="numRecords">
-                                <option value="1">1</option>
-                                <option value="5" selected>5</option>
-                                <option value="10">10</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="startYear">Start Year:</label>
-                            <input type="text" class="form-control clearThis" id="startYear">
-                        </div>
-                        <div class="form-group">
-                                <label for="endYear">End Year:</label>
-                                <input type="text" class="form-control clearThis" id="endYear">
-                            </div>
-                      <a href="#" type="submit" class="btn btn-warning" id="searchBtn">Search</a>
-                      <a href="#" type="button" class="btn btn-warning" id="clear">Clear</a>
+                            <form id="queryForm" data-parsley-validate>
+                                <label for="search">Search Term:</label>
+                                <input type="text" class="form-control clearThis" id="search" placeholder="Search Terms" 
+                                data-parsley-length="[2, 4]" data-parsley-type="alphanum" data-parsley-trigger="change" required="true">
+                                </div>
+                                <div class="form-group">
+                                    <label for="sel1">Number of Records to Retrieve:</label>
+                                    <select class="form-control" id="numRecords" required="true">
+                                        <option value="1">1</option>
+                                        <option value="5" selected>5</option>
+                                        <option value="10">10</option>
+                                    </select>
+                                </div>
+                                <div class="form-group" data-parsley-validate>
+                                    <label for="startYear">Start Year:</label>
+                                    <input type="text" class="form-control clearThis" id="startYear" placeholder="optional" data-parsley-type="integer" data-parsley-length="[4, 4]" data-parsley-min="1900" data-parsley-max="2040" data-parsley-trigger="keyup" required="true" data-parsley-error-message="must be a year between 1900 and today's year">
+                                </div>
+                                <div class="form-group" data-parsley-validate>
+                                        <label for="endYear">End Year:</label>
+                                        <input type="text" class="form-control clearThis" id="endYear" placeholder="optional" data-parsley-type="integer" data-parsley-length="[4, 4]" data-parsley-min="1900" data-parsley-max="2040" data-parsley-trigger="keyup" required="true" data-parsley-error-message="must be a year between 1900 and today's year">
+                                    </div>
+                            <a href="#" type="submit" class="btn btn-warning" id="searchBtn">Search</a>
+                            <a href="#" type="button" class="btn btn-warning" id="clear">Clear</a>
+                        </form>
                     </div>
                 </div>
             </div>
