--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cousine&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
@@ -30,7 +30,7 @@
                             <form id="queryForm" data-parsley-validate>
                                 <label for="search">Search Term:</label>
                                 <input type="text" class="form-control clearThis" id="search" placeholder="Search Terms" 
-                                data-parsley-length="[2, 4]" data-parsley-type="alphanum" data-parsley-trigger="change" required="true">
+                                 data-parsley-type="alphanum" data-parsley-trigger="change" required="true">
                                 </div>
                                 <div class="form-group">
                                     <label for="sel1">Number of Records to Retrieve:</label>
@@ -66,6 +66,6 @@
             </div>
         </div>  
     </div>
-    <script src="javascript/java.js"></script>
+    <script src="/javascript/java.js"></script>
 </body>
 </html>
